--- a/doc/style.css
+++ b/doc/style.css
@@ -1,8 +1,19 @@
 body
 {
     padding:1em;
-
+    display: block;
     font-family:verdana,helvetica,arial,sans-serif;
+}
+
+
+
+
+img
+{
+    width:90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
