Links and CSS updates on book HTML
The `<meta name="viewport" ...>' tag was no included in the HTMLs so it
would not display nicely on smaller screens (smartphones). `doc/forwebpage'
now adds this line to each HTML.

Also the links to the bottom of the page are not relative any more, they
point to the main gnu.org server's version. The reason is this: With
relative addresses, the browser would keep the slashes in the address, so
we would end up with many slashes in the HTML names of pages afterwards and
MathJax wouldn't work, since we used relative addresses for it.

In the CSS, the page's margin was set to zero and the font size of the
menues were made larger.

--- a/doc/style.css
+++ b/doc/style.css
@@ -86,10 +86,10 @@ section{
 /* In a narrow screen it is much easier to read fonts that are
    slightly larger than the standard size. */
 body{
+    margin: 0;
     font-size: 110%;		/* Default browser size.           */
     font-weight: 100;		/* Thin fonts for all pages.       */
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding: 0 0.5em 0 0.5em;
     font-family: open_sanslight, sans-serif;
 }
 
@@ -232,6 +232,15 @@ table.cartouche {
     padding:0.5em 1em 0 1em;
     border-radius:10px;
     background-color:#e6eaf4;
+}
+
+
+
+
+
+/* Menu tables */
+table.menu {
+    font-size: 95%;
 }
 
 
