CSS for blockquotes, widescreen fonts slighly larger
The author of a quote was spaced too far away from the quote in the
original CSS and closer to the paragraph lines. With this commit, we
defined some CSS styles for the block quotes to the authors can be closer
to quotes rather than the next paragraph. However, this would decrease the
space in blockquote tags that don't have an author. So for any such
element, we also added a top margin.

Also, after a little more vewing on wide monitor screens and narrow
smartphone screens, I feel that the widescreen fonts needed to be slightly
increased for easier readability (atleast to my eyes!).

--- a/doc/style.css
+++ b/doc/style.css
@@ -98,6 +98,7 @@ body{
    browser with the max-width variable. */
 @media screen and (min-width: 32em) {
     body {
+	font-size: 105%;        /* Default browser's font size.    */
 	margin: 0 auto;	        /* To center the page.             */
 	max-width: 60em;        /* Page width depends on font size.*/
     }
@@ -169,6 +170,25 @@ em {
     font-size: 90%;
     font-weight: 100;
     font-style: italic;
+}
+
+
+
+
+
+/* Quotes */
+blockquote {
+    font-size: 90%;
+    margin-top: 0.75em;
+    padding-bottom: 0;
+    border-bottom: 0;
+    margin-bottom: 0;
+}
+blockquote+div {
+    margin-bottom: 0.75em;
+}
+blockquote+:not(div) {
+    margin-top: 0.75em;
 }
 
 
